--- a/llama-cpp-image/Containerfile
+++ b/llama-cpp-image/Containerfile
@@ -33,6 +33,7 @@ RUN dnf install -y procps-ng python3 python3-pip python3-devel intel-level-zero 
     chown 0:0 /etc/passwd ; \
     chown 0:0 /etc/group ; \
     chmod g=u /etc/passwd /etc/group /home ; \
+    pip install ramalama
     chmod +x /entrypoint.sh
 
 USER 10000
