--- a/llama-cpp-image/Containerfile
+++ b/llama-cpp-image/Containerfile
@@ -1,10 +1,12 @@
 FROM quay.io/fedora/fedora:41 as builder
 
+ARG LLAMA_CPP_VER=b4778
+
 COPY oneAPI.repo /etc/yum.repos.d/
 
 RUN dnf install -y procps-ng g++ cmake git libcurl-devel intel-oneapi-mkl-sycl-devel intel-oneapi-dnnl-devel intel-oneapi-compiler-dpcpp-cpp intel-level-zero oneapi-level-zero oneapi-level-zero-devel intel-compute-runtime ; \
     source /opt/intel/oneapi/setvars.sh ; \
-    git clone https://github.com/ggerganov/llama.cpp.git ; \
+    git clone https://github.com/ggerganov/llama.cpp.git -b ${LLAMA_CPP_VER} ; \
     cd llama.cpp ; \
     mkdir -p build ; \
     cd build ; \
@@ -29,14 +31,13 @@ COPY --from=builder /llama-cpp/include/ /usr/include/
 COPY oneAPI.repo /etc/yum.repos.d/
 COPY --chown=0:0 entrypoint.sh /
 
-RUN dnf install -y procps-ng python3 python3-pip python3-devel intel-level-zero oneapi-level-zero intel-compute-runtime libcurl lspci clinfo intel-oneapi-runtime-compilers intel-oneapi-mkl-core intel-oneapi-mkl-sycl-blas intel-oneapi-runtime-dnnl ; \
+RUN dnf install -y procps-ng python3 python3-pip python3-devel intel-level-zero oneapi-level-zero intel-compute-runtime libcurl lspci clinfo intel-oneapi-runtime-compilers intel-oneapi-mkl-core intel-oneapi-mkl-sycl-blas intel-oneapi-runtime-dnnl intel-gpu-tools; \
     chown 0:0 /etc/passwd ; \
     chown 0:0 /etc/group ; \
     chmod g=u /etc/passwd /etc/group /home ; \
-    pip install ramalama
+    pip install ramalama ; \
     chmod +x /entrypoint.sh
 
 USER 10000
 
 ENTRYPOINT ["/entrypoint.sh"]
-CMD [ "tail", "-f", "/dev/null" ]
