add GPU device to workspace for local testing

--- a/devfile.yaml
+++ b/devfile.yaml
@@ -17,7 +17,7 @@ components:
     pod-overrides:
       metadata:
         annotations:
-          io.kubernetes.cri-o.Devices: "/dev/fuse,/dev/net/tun"
+          io.kubernetes.cri-o.Devices: "/dev/fuse,/dev/net/tun,/dev/dri/renderD128"
       spec:
         hostUsers: false
     container-overrides: 
