--- a/llama-cpp-image/Containerfile
+++ b/llama-cpp-image/Containerfile
@@ -1,6 +1,6 @@
 FROM quay.io/fedora/fedora:41 as builder
 
-ARG LLAMA_CPP_VER=b4778
+ARG LLAMA_CPP_VER=b4784
 
 COPY oneAPI.repo /etc/yum.repos.d/
 
@@ -10,28 +10,28 @@ RUN dnf install -y procps-ng g++ cmake git libcurl-devel intel-oneapi-mkl-sycl-d
     cd llama.cpp ; \
     mkdir -p build ; \
     cd build ; \
-    cmake .. -DGGML_SYCL=ON -DCMAKE_C_COMPILER=icx -DCMAKE_CXX_COMPILER=icpx -DLLAMA_CURL=ON -DGGML_CCACHE=OFF -DGGML_NATIVE=OFF ; \
+    cmake .. -DGGML_SYCL=ON -DCMAKE_C_COMPILER=icx -DCMAKE_CXX_COMPILER=icpx -DLLAMA_CURL=ON -DGGML_CCACHE=OFF -DGGML_NATIVE=OFF -DGGML_CPU_AARCH64=OFF ; \
     cmake --build . --config Release -j -v ; \
-    cmake --install . --prefix /llama-cpp ; \
-    cd ../.. ; \
-    git clone https://github.com/ggerganov/whisper.cpp ; \
-    cd whisper.cpp ; \
-    mkdir -p build ; \
-    cd build ; \
-    cmake .. -DGGML_SYCL=ON -DCMAKE_C_COMPILER=icx -DCMAKE_CXX_COMPILER=icpx -DGGML_CCACHE=OFF -DGGML_NATIVE=OFF ; \
-    cmake --build . --config Release -v ; \
     cmake --install . --prefix /llama-cpp
+    # cd ../.. ; \
+    # git clone https://github.com/ggerganov/whisper.cpp ; \
+    # cd whisper.cpp ; \
+    # mkdir -p build ; \
+    # cd build ; \
+    # cmake .. -DGGML_SYCL=ON -DCMAKE_C_COMPILER=icx -DCMAKE_CXX_COMPILER=icpx -DGGML_CCACHE=OFF -DGGML_NATIVE=OFF ; \
+    # cmake --build . --config Release -v ; \
+    # cmake --install . --prefix /llama-cpp
 
 FROM quay.io/fedora/fedora:41
 
 COPY --from=builder /llama-cpp/bin/ /usr/bin/
-COPY --from=builder /llama-cpp/lib/ /usr/lib/
+# COPY --from=builder /llama-cpp/lib/ /usr/lib/
 COPY --from=builder /llama-cpp/lib64/ /usr/lib64/
 COPY --from=builder /llama-cpp/include/ /usr/include/
 COPY oneAPI.repo /etc/yum.repos.d/
 COPY --chown=0:0 entrypoint.sh /
 
-RUN dnf install -y procps-ng python3 python3-pip python3-devel intel-level-zero oneapi-level-zero intel-compute-runtime libcurl lspci clinfo intel-oneapi-runtime-compilers intel-oneapi-mkl-core intel-oneapi-mkl-sycl-blas intel-oneapi-runtime-dnnl intel-gpu-tools; \
+RUN dnf install -y procps-ng python3 python3-pip python3-devel intel-level-zero oneapi-level-zero intel-compute-runtime libcurl lspci clinfo intel-oneapi-runtime-compilers intel-oneapi-mkl-core intel-oneapi-mkl-sycl-blas intel-oneapi-runtime-dnnl intel-gpu-tools wget ; \
     chown 0:0 /etc/passwd ; \
     chown 0:0 /etc/group ; \
     chmod g=u /etc/passwd /etc/group /home ; \
